--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.snow.night.special.Mylinealayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:id="@+id/my_layout"
+
     android:orientation="vertical" >
 
     <LinearLayout
@@ -25,4 +26,4 @@
         android:layout_height="match_parent"
         android:id="@+id/main_listview"></ListView>
 
-</LinearLayout>
+</com.snow.night.special.Mylinealayout>
